Added some additional values as part of the FastenerDetails and added corresponding enums. Updated instances that interact with the model.